tests/snapshots/compiler_error_fixtures/row_effects__invalid_row_subtract_e421.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/invalid_row_subtract_e421.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/compiler_errors/row_effects/invalid_row_subtract_e421.flx:19:5
   |
19 |     run_filtered(io_console_work)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     ----------------------------- parameter 1 has type `() -> Unit with Console, FileSystem, Stdin, Env, Process`

   |     ----------------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with FileSystem, Stdin, Env, Process
  found parameter type: () -> Unit with Console, FileSystem, Stdin, Env, Process
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with FileSystem, Stdin, Env, Process` consistently.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
