tests/snapshots/compiler_error_fixtures/row_effects__unhandled_root_effect_e406.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/unhandled_root_effect_e406.flx
== compile ==
failed (compile)
== diagnostics ==
error[E406]: Unhandled Root Effect

`fn main` has undischarged effects: Console.

  examples/compiler_errors/row_effects/unhandled_root_effect_e406.flx:9:32
   |
 9 | fn main() -> Unit with Console {
   |                                ^
10 |     log("x");
   | ^^^^^^^^^^^^^
11 | }
   | ^

Hint:
  Handle these effects explicitly with `... handle Effect { ... }` before returning from `main`.


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
