tests/snapshots/compiler_error_fixtures/row_effects__unknown_performed_operation_e404.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/unknown_performed_operation_e404.flx
== compile ==
failed (compile)
== diagnostics ==
error[E404]: Unknown Effect Operation

Effect `Console` has no declared operation `read`.

  examples/compiler_errors/row_effects/unknown_performed_operation_e404.flx:9:5
  |
9 |     perform Console.read("x")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |     ------------------------- unknown operation in perform

Hint:
  Add the operation to the effect declaration or rename it.
== stdout ==
<not executed>
