tests/snapshots/compiler_error_fixtures/row_effects__unsatisfied_row_subset_e422.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/unsatisfied_row_subset_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/compiler_errors/row_effects/unsatisfied_row_subset_e422.flx:14:5
   |
14 |     run_needs_io_time(only_io)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------- parameter 1 has type `() -> Unit with Console, FileSystem, Stdin, Env, Process`

   |     -------------------------- this type mismatch is reported here

Note:
  expected parameter type: () -> Unit with Console, FileSystem, Stdin, Env, Process, Clock
  found parameter type: () -> Unit with Console, FileSystem, Stdin, Env, Process
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `() -> Unit with Console, FileSystem, Stdin, Env, Process, Clock` consistently.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
